syntax = "proto3";

option go_package = "github.com/vynaloze/mapreduce/engine/ping_pong";

package mapreduce;

service PingPong {
  rpc Ping (PingRequest) returns (PongReply) {}
}

message PingRequest {
  string message = 1;
//  int64 sleepSeconds = 2;
}

message PongReply {
  string message = 1;
}
